--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  block-size: 100%;
+}
+body {
+  block-size: 100%;
+  font-family: "Inter", sans-serif;
+}
